src/api/snapshots/tidx__api__views__tests__runtime_sql_with_pushdown.snap
---
source: src/api/views.rs
expression: sql
---
WITH transfer AS (
    SELECT block_num, block_timestamp, log_idx, tx_idx, 
           concat('0x', lower(substring(tx_hash, 3))) AS tx_hash,
           concat('0x', lower(substring(address, 3))) AS address, selector, topic1, topic2, topic3, data, concat('0x', lower(substring(topic1, 27))) AS "from", concat('0x', lower(substring(topic2, 27))) AS "to", reinterpretAsUInt256(reverse(unhex(substring(data, 3, 64)))) AS "value"
    FROM logs
    WHERE selector = '\\xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef'
) SELECT "value" FROM Transfer WHERE topic1 = '\x000000000000000000000000dac17f958d2ee523a2206206994597c13d831ec7'
